--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -8,7 +8,7 @@
             </div>
             <div class="col-12">
                 <div class="row mt-3">
-                    <div class="col-lg-3 col-md-6" *ngFor="let product of productsArray">
+                    <div class="col-lg-3 col-md-6" *ngFor="let product of getDisplayedProducts()">
                         <div class="box-shadow">
                             <div class="card mt-2" [routerLink]="['/products', product.id]">
                                 <img [src]="product.thumbnail" class="card-img-top img-fluid" alt="image">
@@ -24,4 +24,9 @@
             </div>          
         </div>
     </div>
+    <div class="pagination-container">
+        <button class="pagination-button" [disabled]="currentPage === 1" (click)="onPageChange(currentPage - 1)">Previous</button>
+        <span>Page {{ currentPage }} of {{ totalPages }}</span>
+        <button class="pagination-button" [disabled]="currentPage === totalPages" (click)="onPageChange(currentPage + 1)">Next</button>
+      </div>  
 </section>
