--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <!-- NavBar -->
   <nav class="navbar navbar-expand-lg navbar-light nav-yellow border-bottom border-top p-0">
     <div class="container">
-      <a class="navbar-brand fs-4 fw-bold" routerLink="/products">
+      <a class="navbar-brand fs-4 fw-bold" routerLink="/home">
         <i class="fa fa-shoe-prints"></i>
         <span class="textBlur">SoleStride</span>
       </a>
@@ -14,13 +14,19 @@
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0  text-center ">
 
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle fw-semibold text-uppercase  me-1 text-danger" href="#"
+            <a class="nav-link dropdown-toggle fw-semibold text-uppercase  me-1 text-danger" routerLink="/home"
               id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               home
             </a>
-            <ul class="dropdown-menu  " aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item " routerLink="/products">Products</a></li>
-            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle redHover fw-semibold text-uppercase text-black  me-1" href="#"
+              id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Categories
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" routerLink="/products">Products</a></li>
+              </ul>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle redHover fw-semibold text-uppercase text-black  me-1" href="#"
@@ -103,18 +109,13 @@
               </li>
             </ul>
           </li>
-          
-          
-
           <li class="nav-item">
             <a class="nav-link" href="#"> </a>
           </li>
-
         </ul>
       </div>
     </div>
   </nav>
 </header>
-
-
 <router-outlet></router-outlet>
+
