--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,3 +1,7 @@
+<div *ngIf="isLoading">
+    <!-- Loading indicator -->
+    <p>Loading...</p>
+    </div>
 <section id="product">
     <div class="container">
         <div class="row">
@@ -24,9 +28,11 @@
             </div>          
         </div>
     </div>
+    <div *ngIf="!isLoading">
     <div class="pagination-container">
         <button class="pagination-button" [disabled]="currentPage === 1" (click)="onPageChange(currentPage - 1)">Previous</button>
         <span>Page {{ currentPage }} of {{ totalPages }}</span>
         <button class="pagination-button" [disabled]="currentPage === totalPages" (click)="onPageChange(currentPage + 1)">Next</button>
       </div>  
+    </div>
 </section>
