--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600&family=Roboto:wght@300;400;500;900&display=swap");
+@import '~swiper/swiper-bundle.css';
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&display=swap');
