--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle redHover fw-semibold text-uppercase text-black  me-1" href="#"
               id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              About Us
+              About 
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" href="#">Overview</a></li>
@@ -41,7 +41,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link fw-semibold text-uppercase text-black  me-1" href="#">Contact us</a>
+            <a class="nav-link fw-semibold text-uppercase text-black  me-1" href="#">Contact</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#"><i class="fa-fa-search fs-5" style="color: #0c0d0d;"></i></a>
