--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,7 +1,15 @@
-<div *ngIf="isLoading">
-    <!-- Loading indicator -->
-    <p>Loading...</p>
+<div *ngIf="isLoading" class="product-details-container">
+    <div class="loader">
+        <div class="loader-wrapper">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
     </div>
+</div>
 <section id="product">
     <div class="container">
         <div class="row">
