--- a/src/app/productdetails/productdetails.component.css
+++ b/src/app/productdetails/productdetails.component.css
@@ -1,60 +1,195 @@
-.product-details-container {
-  display: flex;
-  padding-top: 10px;
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+
+body {
+  font-family: 'Roboto', sans-serif;
+  background-color: #f8f9fa; 
 }
 
+.product-details-container {
+  display: flex;
+  padding-top: 20px;
+  background-color: #fff; 
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+  margin-top: 20px;
+}
 
 .product-image {
-  margin-right: 20px; 
-  margin-left: 20px;
- 
+  margin: 20px;
 }
 
 .product-image img {
-  width: 100%; 
-  height: auto; 
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); 
 }
 
-.product-details {  
-  flex: 1; 
-  font-family: 'Merriweather', serif;;
+.product-details {
+  flex: 1;
+  padding: 20px;
 }
 
 .product-details h2 {
-  margin-top: 0; 
+  margin-top: 0;
+  font-size: 24px;
+  color: #333; /* Dark text color */
 }
 
 .price {
-  margin-bottom: 10px; 
+  margin-bottom: 10px;
+  font-size: 18px;
+  color: #007bff; /* Blue for price */
 }
 
-  .btn-primary {
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  padding: 8px 16px;
+.price .price-value {
+  font-weight: bold;
+}
+
+.btn {
+  display: inline-block;
+  padding: 10px 20px;
   border-radius: 20px;
   cursor: pointer;
-  transition: background-color 0.3s ease;
-  margin-right: 10px;
- 
+  transition: background-color 0.5s ease;
+  text-decoration: none;
+  text-align: center;
+  font-size: 16px;
+  font-weight: bold;
+  border: solid 2px #212529; 
+  background: #212529;
+  color: #fff;
+  justify-content: space-between;
 }
 
 .btn-primary:hover {
-  background-color: #0056b3;
-}
-
-.btn-secondary {
-  background-color: #6c757d;
-  color: #fff;
-  border: none;
-  padding: 8px 16px;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.3s ease;
-  border-radius: 20px;
+  background: transparent;
+	color: #212529; 
+	text-decoration: none;
 }
 
 .btn-secondary:hover {
-  background-color: #545b62;
+  background: transparent;
+	color: #212529; 
+	text-decoration: none;
 }
+
+.add-to-cart-btn, .edit-btn {
+  margin-right: 10px;
+  margin: 10px;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+.form-group label {
+  font-weight: bold;
+}
+
+.form-control {
+  width: 100%;
+  padding: 5px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+}
+
+.rate {
+  float: left;
+  padding: 0 10px 0 0;
+}
+.rate:not(:checked) > input {
+  position:absolute;
+  top:-9999px;
+}
+.rate:not(:checked) > label {
+  float: right;
+  width: 15px;
+  overflow: hidden;
+  white-space: nowrap;
+  cursor: pointer;
+  font-size: 21px;
+  color:#ccc;
+margin-bottom: 0;
+line-height: 21px;
+}
+.rate:not(:checked) > label:before {
+  content: '\2605';
+}
+.rate > input:checked ~ label {
+  color: #ffc700;    
+}
+.rate:not(:checked) > label:hover,
+.rate:not(:checked) > label:hover ~ label {
+  color: #deb217;  
+}
+.rate > input:checked + label:hover,
+.rate > input:checked + label:hover ~ label,
+.rate > input:checked ~ label:hover,
+.rate > input:checked ~ label:hover ~ label,
+.rate > label:hover ~ input:checked ~ label {
+  color: #c59b08;
+}
+.loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+}
+
+.loader-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 50%; left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  width: 100%;
+}
+
+.loader span {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  background-color: #068383; 
+  margin: 0 3px;
+  border-radius: 50%;
+  animation: loaderAnimation 15.3s infinite ease-in-out;;
+}
+.loader .loader-wrapper span:nth-of-type(1) {
+  animation-delay: 1000ms;
+}
+.loader .loader-wrapper span:nth-of-type(2) {
+  animation-delay: 800ms;
+}
+.loader .loader-wrapper span:nth-of-type(3) {
+  animation-delay: 600ms;
+}
+.loader .loader-wrapper span:nth-of-type(4) {
+  animation-delay: 400ms;
+}
+.loader .loader-wrapper span:nth-of-type(5) {
+  animation-delay: 200ms;
+}
+@keyframes loaderAnimation {
+  0% {opacity: 0;
+    transform: translateX(-300px);
+    }
+    33% {opacity: 1;
+    transform: translateX(0px);
+    }
+    66% {opacity: 1;
+    transform: translateX(0px);
+    }
+    100% {opacity: 0;
+    transform: translateX(300px);
+    }
+  }
+  
