--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -132,33 +132,154 @@
   border-radius: 5px;
 }
 .login-form-container button {
-  width: 100%;
-  padding: 10px;
-  border: none;
-  border-radius: 5px;
-  background-color: #007bff;
-  color: #fff;
-  font-size: 16px;
+  display: flex;
+  padding: 10px 20px;
+  border-radius: 20px;
   cursor: pointer;
+  transition: background-color 0.5s ease;
+  text-decoration: none;
+  text-align: center;
+  font-size: 16px;
+  font-weight: bold;
+  border: solid 2px #212529; 
+  background: #212529;
+  color: #fff;
+  justify-content: center;
+  
 }
 .login-form-container button:hover {
-  background-color: #0056b3;
+  background: transparent;
+	color: #212529; 
+	text-decoration: none;
 }
 .logout-button {
-  background-color: #dc3545; 
-  color: white;
-  padding: 8px 16px;
-  border: none;
-  border-radius: 4px;
+  background-color: #362A89;
+  display: inline-block;
+  padding: 10px 20px;
+  border-radius: 10px;
   cursor: pointer;
-  transition: background-color 0.3s ease;
-  text-decoration: none; 
-  display: inline-block; 
+  transition: background-color 0.5s ease;
+  text-decoration: none;
+  text-align: center;
+  font-size: 16px;
+  font-weight: bold;
+  border: solid 2px #212529; 
+  color: #fff;
 }
 
 .logout-button:hover {
-  background-color: #c82333; 
+  background: transparent;
+	color: #362A89; 
+	text-decoration: none;
+}
+:root {
+  --border-radius: 10px;
+  --spacer: 1rem;
+  --primary-color: #406ff3;
+  --text-color: #6a778e;
+  --link-height: calc(var(--spacer) * 3.5);
+  --timing: 250ms;
+  --transition: var(--timing) ease all;
 }
 
+/* Keyframes */
+@keyframes gooeyEffect {
+  0% {
+    transform: scale(1, 1);
+  }
+  50% {
+    transform: scale(0.5, 1.5);
+  }
+  100% {
+    transform: scale(1, 1);
+  }
+}
 
- 
+/* Fonts */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap');
+
+/* Navbar */
+.navbar {
+  left: var(--spacer);
+  background: #fff;
+  border-radius: var(--border-radius);
+  padding: var(--spacer) 0;
+  box-shadow: 0 0 40px rgba(0, 0, 0, 0.03);
+  overflow-x: hidden;
+}
+
+.navbar__link {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: var(--link-height);
+  width: calc(var(--spacer) * 5.5);
+  color: var(--text-color);
+  transition: var(--transition);
+}
+
+.navbar__link i {
+  margin-right: 0.5rem; /* Adjust as needed */
+}
+
+.navbar__link span {
+  position: absolute;
+  left: calc(100% + 1rem); /* Adjust distance from icon */
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  pointer-events: none;
+  color: var(--primary-color);
+  background: #fff;
+  padding: 0.75rem;
+  border-radius: calc(var(--border-radius) * 1.75);
+  transition: var(--transition);
+}
+
+.navbar__link:hover span {
+  opacity: 1;
+  left: 100%; /* Adjust to make the name visible */
+  transform: translate(-50%, -50%);
+}
+
+.navbar__item:last-child:before {
+  content: '';
+  position: absolute;
+  opacity: 0;
+  z-index: -1;
+  top: 0;
+  left: var(--spacer);
+  width: var(--link-height);
+  height: var(--link-height);
+  background: var(--primary-color);
+  border-radius: calc(var(--border-radius) * 1.75);
+  transition: var(--timing) cubic-bezier(1, 0.2, 0.1, 1.2) all;
+}
+
+.navbar__item:hover:before {
+  opacity: 1;
+  animation: gooeyEffect var(--timing) 1;
+}
+
+.navbar {
+  background-color: #f9f9f9;
+}
+
+.navbar-brand {
+  margin-right: auto; /* Aligns to the left */
+}
+
+/* Navbar Gooey Effect */
+.navbar-nav .nav-link i {
+  transition: transform 0.5s;
+}
+
+.navbar-nav .nav-link:hover i {
+  animation: gooeyEffect 0.5s;
+}
+
+/* Dropdown menu on the left */
+.dropdown-menu.menuOnLeft {
+  left: auto;
+  right: 0;
+}
