--- a/src/app/product-edit/product-edit.component.css
+++ b/src/app/product-edit/product-edit.component.css
@@ -1,68 +1,74 @@
 .product-details-container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 20px;
+  display: flex;
+  justify-content: center;
+  margin: 20px;
 }
 
 .product-image {
-    margin-right: 40px; /* Increase the margin for more space */
+  margin-right: 20px; 
 }
 
 .product-details {
-    width: 400px;
+  width: 400px;
 }
 
 .product-details h2 {
-    font-size: 24px;
-    margin-bottom: 20px;
+  font-size: 24px;
+  margin-bottom: 20px;
 }
 
 .product-details form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .product-details form .form-group {
-    margin-bottom: 15px;
-  }
-  
-  .product-details form .form-group label {
-    font-weight: bold;
-  }
-  
-  .product-details form .form-control {
-    width: 100%;
-    padding: 10px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-  
-  .product-details form .button-container {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-  }
-  
-  .product-details form button {
-    padding: 10px 20px;
-    font-size: 16px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-  }
-  
-  .product-details form button.btn-primary {
-    background-color: #007bff;
-    color: #fff;
-  }
-  
-  .product-details form button.btn-secondary {
-    background-color: #6c757d;
-    color: #fff;
-  }
-  
-  .product-details form button.btn-secondary:hover {
-    background-color: #5a6268;
-  }
+  display: flex;
+  flex-direction: column;
+}
+
+.product-details form .form-group {
+  margin-bottom: 15px;
+}
+
+.product-details form .form-group label {
+  font-weight: bold;
+}
+
+.product-details form .form-control {
+  width: 100%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+.product-details form .button-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+}
+
+.product-details form button {
+  display: inline-block;
+  padding: 10px 20px;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: background-color 0.5s ease;
+  text-decoration: none;
+  text-align: center;
+  font-size: 16px;
+  font-weight: bold;
+  border: solid 2px #212529; 
+  background: #212529;
+  color: #fff;
+  justify-content: space-between;
+  margin-right: 10px;
+}
+
+.product-details form button.btn-primary:hover {
+  background: transparent;
+	color: #212529; 
+	text-decoration: none;
+}
+
+.product-details form button.btn-secondary:hover {
+  background: transparent;
+	color: #212529; 
+	text-decoration: none;
+}
