--- a/src/app/product-edit/product-edit.component.html
+++ b/src/app/product-edit/product-edit.component.html
@@ -4,41 +4,58 @@
     </div>
     <div class="product-details">
         <h2>{{ product.title }}</h2>
-        <form (ngSubmit)="saveProductChanges()">
-            <div class="form-group">
-                <label for="description">Description:</label>
-                <textarea id="description" name="description" [(ngModel)]="editedProduct.description"
-                    class="form-control"></textarea>
+        <div class="modal fade" id="myModal" role="dialog">
+            <div class="modal-dialog" style="width: 450px">
+                <div class="modal-content" style="border: 6px solid; border-color: #daf0ef">
+
+                    <!-- Modal content -->
+                    <div class="modal-body" style="width: 100%; background: #ffffff; padding: 50px">
+                        <!-- Add your form here -->
+                        <form (ngSubmit)="saveProductChanges()">
+                            <div class="form-group">
+                                <label for="description">Description:</label>
+                                <textarea id="description" name="description" [(ngModel)]="editedProduct.description"
+                                    class="form-control"></textarea>
+                            </div>
+                            <div class="form-group">
+                                <label for="price">Price:</label>
+                                <input type="number" id="price" name="price" [(ngModel)]="editedProduct.price"
+                                    class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label for="discountPercentage">Discount Percentage:</label>
+                                <input type="number" id="discountPercentage" name="discountPercentage"
+                                    [(ngModel)]="editedProduct.discountPercentage" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label for="rating">Rating:</label>
+                                <input type="number" id="rating" name="rating" [(ngModel)]="editedProduct.rating"
+                                    class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label for="stock">Stock:</label>
+                                <input type="number" id="stock" name="stock" [(ngModel)]="editedProduct.stock"
+                                    class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label for="brand">Brand:</label>
+                                <input type="text" id="brand" name="brand" [(ngModel)]="editedProduct.brand"
+                                    class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label for="category">Category:</label>
+                                <input type="text" id="category" name="category" [(ngModel)]="editedProduct.category"
+                                    class="form-control">
+                            </div>
+                            <div class="modal-footer" style="width: 100%; background: #ffffff;">
+                                <button type="button" class="btn btn-default" data-dismiss="modal"
+                                    style="background: #362A89; color: #fff">Save</button>
+                            </div>
+                        </form>
+                    </div>
+
+                </div>
             </div>
-            <div class="form-group">
-                <label for="price">Price:</label>
-                <input type="number" id="price" name="price" [(ngModel)]="editedProduct.price" class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="discountPercentage">Discount Percentage:</label>
-                <input type="number" id="discountPercentage" name="discountPercentage" [(ngModel)]="editedProduct.discountPercentage"
-                    class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="rating">Rating:</label>
-                <input type="number" id="rating" name="rating" [(ngModel)]="editedProduct.rating" class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="stock">Stock:</label>
-                <input type="number" id="stock" name="stock" [(ngModel)]="editedProduct.stock" class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="brand">Brand:</label>
-                <input type="text" id="brand" name="brand" [(ngModel)]="editedProduct.brand" class="form-control">
-            </div>
-            <div class="form-group">
-                <label for="category">Category:</label>
-                <input type="text" id="category" name="category" [(ngModel)]="editedProduct.category" class="form-control">
-            </div>
-            <div class="button-container">
-                <button type="submit" class="btn btn-primary">Save</button>
-                <button type="button" class="btn btn-secondary" (click)="cancelEdit()">Cancel</button>
-              </div>
-        </form>
+        </div>
     </div>
 </div>
