--- a/src/app/productdetails/productdetails.component.css
+++ b/src/app/productdetails/productdetails.component.css
@@ -3,15 +3,15 @@
 
 body {
   font-family: 'Roboto', sans-serif;
-  background-color: #f8f9fa; 
+  background-color: #f8f9fa;
 }
 
 .product-details-container {
   display: flex;
   padding-top: 20px;
-  background-color: #fff; 
+  background-color: #fff;
   border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   margin-top: 20px;
 }
 
@@ -23,7 +23,7 @@ body {
   width: 100%;
   height: auto;
   border-radius: 8px;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); 
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 }
 
 .product-details {
@@ -34,13 +34,15 @@ body {
 .product-details h2 {
   margin-top: 0;
   font-size: 24px;
-  color: #333; /* Dark text color */
+  color: #333;
+  /* Dark text color */
 }
 
 .price {
   margin-bottom: 10px;
   font-size: 18px;
-  color: #007bff; /* Blue for price */
+  color: #007bff;
+  /* Blue for price */
 }
 
 .price .price-value {
@@ -49,33 +51,29 @@ body {
 
 .btn {
   display: inline-block;
-  padding: 10px 20px;
-  border-radius: 20px;
   cursor: pointer;
   transition: background-color 0.5s ease;
   text-decoration: none;
   text-align: center;
   font-size: 16px;
   font-weight: bold;
-  border: solid 2px #212529; 
-  background: #212529;
+  border: none;
+  background: none;
+  padding: 8px 28px;
+  border-radius: 8px;
+  background: #362A89;
   color: #fff;
   justify-content: space-between;
 }
 
-.btn-primary:hover {
-  background: transparent;
-	color: #212529; 
-	text-decoration: none;
-}
-
 .btn-secondary:hover {
   background: transparent;
-	color: #212529; 
-	text-decoration: none;
+  color: #212529;
+  text-decoration: none;
 }
 
-.add-to-cart-btn, .edit-btn {
+.add-to-cart-btn,
+.edit-btn {
   margin-right: 10px;
   margin: 10px;
 }
@@ -100,38 +98,45 @@ body {
   float: left;
   padding: 0 10px 0 0;
 }
-.rate:not(:checked) > input {
-  position:absolute;
-  top:-9999px;
+
+.rate:not(:checked)>input {
+  position: absolute;
+  top: -9999px;
 }
-.rate:not(:checked) > label {
+
+.rate:not(:checked)>label {
   float: right;
   width: 15px;
   overflow: hidden;
   white-space: nowrap;
   cursor: pointer;
   font-size: 21px;
-  color:#ccc;
-margin-bottom: 0;
-line-height: 21px;
+  color: #ccc;
+  margin-bottom: 0;
+  line-height: 21px;
 }
-.rate:not(:checked) > label:before {
+
+.rate:not(:checked)>label:before {
   content: '\2605';
 }
-.rate > input:checked ~ label {
-  color: #ffc700;    
+
+.rate>input:checked~label {
+  color: #ffc700;
 }
-.rate:not(:checked) > label:hover,
-.rate:not(:checked) > label:hover ~ label {
-  color: #deb217;  
+
+.rate:not(:checked)>label:hover,
+.rate:not(:checked)>label:hover~label {
+  color: #deb217;
 }
-.rate > input:checked + label:hover,
-.rate > input:checked + label:hover ~ label,
-.rate > input:checked ~ label:hover,
-.rate > input:checked ~ label:hover ~ label,
-.rate > label:hover ~ input:checked ~ label {
+
+.rate>input:checked+label:hover,
+.rate>input:checked+label:hover~label,
+.rate>input:checked~label:hover,
+.rate>input:checked~label:hover~label,
+.rate>label:hover~input:checked~label {
   color: #c59b08;
 }
+
 .loader {
   display: flex;
   justify-content: center;
@@ -148,7 +153,8 @@ line-height: 21px;
   justify-content: center;
   align-items: center;
   position: absolute;
-  top: 50%; left: 50%;
+  top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
   text-align: center;
   width: 100%;
@@ -158,38 +164,268 @@ line-height: 21px;
   display: inline-block;
   width: 10px;
   height: 10px;
-  background-color: #068383; 
+  background-color: #068383;
   margin: 0 3px;
   border-radius: 50%;
-  animation: loaderAnimation 15.3s infinite ease-in-out;;
+  animation: loaderAnimation 15.3s infinite ease-in-out;
+  ;
 }
+
 .loader .loader-wrapper span:nth-of-type(1) {
   animation-delay: 1000ms;
 }
+
 .loader .loader-wrapper span:nth-of-type(2) {
   animation-delay: 800ms;
 }
+
 .loader .loader-wrapper span:nth-of-type(3) {
   animation-delay: 600ms;
 }
+
 .loader .loader-wrapper span:nth-of-type(4) {
   animation-delay: 400ms;
 }
+
 .loader .loader-wrapper span:nth-of-type(5) {
   animation-delay: 200ms;
 }
+
 @keyframes loaderAnimation {
-  0% {opacity: 0;
+  0% {
+    opacity: 0;
     transform: translateX(-300px);
-    }
-    33% {opacity: 1;
+  }
+
+  33% {
+    opacity: 1;
     transform: translateX(0px);
-    }
-    66% {opacity: 1;
+  }
+
+  66% {
+    opacity: 1;
     transform: translateX(0px);
-    }
-    100% {opacity: 0;
+  }
+
+  100% {
+    opacity: 0;
     transform: translateX(300px);
+  }
+}
+
+.button {
+  --background: #362A89;
+  --text: #fff;
+  --cart: #fff;
+  --tick: var(--background);
+  position: relative;
+  border: none;
+  background: none;
+  padding: 8px 28px;
+  border-radius: 8px;
+  -webkit-appearance: none;
+  -webkit-tap-highlight-color: transparent;
+  -webkit-mask-image: -webkit-radial-gradient(white, black);
+  overflow: hidden;
+  cursor: pointer;
+  text-align: center;
+  min-width: 144px;
+  color: var(--text);
+  background: var(--background);
+  transform: scale(var(--scale, 1));
+  transition: transform .4s cubic-bezier(.36, 1.01, .32, 1.27);
+
+  &:active {
+    --scale: .95;
+  }
+
+  span {
+    font-size: 14px;
+    font-weight: 500;
+    display: block;
+    position: relative;
+    padding-left: 24px;
+    margin-left: -8px;
+    line-height: 26px;
+    transform: translateY(var(--span-y, 0));
+    transition: transform .7s ease;
+
+    &:before,
+    &:after {
+      content: '';
+      width: var(--w, 2px);
+      height: var(--h, 14px);
+      border-radius: 1px;
+      position: absolute;
+      left: var(--l, 8px);
+      top: var(--t, 6px);
+      background: currentColor;
+      transform: scale(.75) rotate(var(--icon-r, 0deg)) translateY(var(--icon-y, 0));
+      transition: transform .65s ease .05s;
+    }
+
+    &:after {
+      --w: 14px;
+      --h: 2px;
+      --l: 2px;
+      --t: 12px;
     }
   }
-  
+
+  .cart {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    margin: -13px 0 0 -18px;
+    transform-origin: 12px 23px;
+    transform: translateX(-120px) rotate(-18deg);
+
+    &:before,
+    &:after {
+      content: '';
+      position: absolute;
+    }
+
+    &:before {
+      width: 6px;
+      height: 6px;
+      border-radius: 50%;
+      box-shadow: inset 0 0 0 2px var(--cart);
+      bottom: 0;
+      left: 9px;
+      filter: drop-shadow(11px 0 0 var(--cart));
+    }
+
+    &:after {
+      width: 16px;
+      height: 9px;
+      background: var(--cart);
+      left: 9px;
+      bottom: 7px;
+      transform-origin: 50% 100%;
+      transform: perspective(4px) rotateX(-6deg) scaleY(var(--fill, 0));
+      transition: transform 1.2s ease var(--fill-d);
+    }
+
+    svg {
+      z-index: 1;
+      width: 36px;
+      height: 26px;
+      display: block;
+      position: relative;
+      fill: none;
+      stroke: var(--cart);
+      stroke-width: 2px;
+      stroke-linecap: round;
+      stroke-linejoin: round;
+
+      polyline {
+        &:last-child {
+          stroke: var(--tick);
+          stroke-dasharray: 10px;
+          stroke-dashoffset: var(--offset, 10px);
+          transition: stroke-dashoffset .4s ease var(--offset-d);
+        }
+      }
+    }
+  }
+
+  &.loading {
+    --scale: .95;
+    --span-y: -32px;
+    --icon-r: 180deg;
+    --fill: 1;
+    --fill-d: .8s;
+    --offset: 0;
+    --offset-d: 1.73s;
+
+    .cart {
+      animation: cart 3.4s linear forwards .2s;
+    }
+  }
+}
+
+@keyframes cart {
+  12.5% {
+    transform: translateX(-60px) rotate(-18deg);
+  }
+
+  25%,
+  45%,
+  55%,
+  75% {
+    transform: none;
+  }
+
+  50% {
+    transform: scale(.9);
+  }
+
+  44%,
+  56% {
+    transform-origin: 12px 23px;
+  }
+
+  45%,
+  55% {
+    transform-origin: 50% 50%;
+  }
+
+  87.5% {
+    transform: translateX(70px) rotate(-18deg);
+  }
+
+  100% {
+    transform: translateX(140px) rotate(-18deg);
+  }
+}
+
+html {
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+}
+
+* {
+  box-sizing: inherit;
+
+  &:before,
+  &:after {
+    box-sizing: inherit;
+  }
+}
+
+body {
+  min-height: 100vh;
+  display: flex;
+  font-family: 'Inter UI', 'Inter', Arial;
+  justify-content: center;
+  align-items: center;
+  background: #ECEFFC;
+
+  .dribbble {
+    position: fixed;
+    display: block;
+    right: 20px;
+    bottom: 20px;
+
+    img {
+      display: block;
+      height: 28px;
+    }
+  }
+  ::ng-deep input::-webkit-input-placeholder {
+    color: red;
+ }
+ 
+ ::ng-deep input:-moz-placeholder { /* Firefox 18- */
+    color: red;  
+ }
+ 
+ ::ng-deep input::-moz-placeholder {  /* Firefox 19+ */
+    color: red;  
+ }
+ 
+ ::ng-deep input:-ms-input-placeholder {  
+    color: red;  
+ }
+}
