--- a/src/app/productdetails/productdetails.component.html
+++ b/src/app/productdetails/productdetails.component.html
@@ -1,17 +1,18 @@
-           <div *ngIf="isLoading">
-            <div class="loader">
-                <div class="loader-wrapper">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-            </div>
+<div *ngIf="isLoading">
+    <div class="loader">
+        <div class="loader-wrapper">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
         </div>
-        <div class="pd-wrap">
-            <div class="container">
+    </div>
+</div>
+
+<div class="pd-wrap">
+    <div class="container">
         <div *ngIf="!isLoading && product" class="product-details-container">
             <!-- Product details section -->
             <div class="product-image">
@@ -22,106 +23,103 @@
                     <div class="product-info">
                         <div class="reviews-counter">
                             <div class="row">
-            <div class="product-details">
-                <h2>{{ product.title }}</h2>
-                <p>{{ product.description }}</p>
-                <p class="price">Price: <span class="price-value">${{ product.price }}</span></p>
-                <p>Discount Percentage: {{ product.discountPercentage }}%</p>
-                <p>Rating: {{ product.rating }}</p>
-                <p>Stock: {{ product.stock }}</p>
-                <p>Brand: {{ product.brand }}</p>
-                <p>Category: {{ product.category }}</p>
+                                <div class="product-details">
+                                    <h2>{{ product.title }}</h2>
+                                    <p>{{ product.description }}</p>
+                                    <p class="price">Price: <span class="price-value">${{ product.price }}</span></p>
+                                    <p>Discount Percentage: {{ product.discountPercentage }}%</p>
+                                    <p>Rating: {{ product.rating }}</p>
+                                    <p>Stock: {{ product.stock }}</p>
+                                    <p>Brand: {{ product.brand }}</p>
+                                    <p>Category: {{ product.category }}</p>
 
-               
-								<div class="rate">
-								    <input type="radio" id="star5" name="rate" value="5" checked />
-								    <label for="star5" title="text">5 stars</label>
-								    <input type="radio" id="star4" name="rate" value="4" checked />
-								    <label for="star4" title="text">4 stars</label>
-								    <input type="radio" id="star3" name="rate" value="3" checked />
-								    <label for="star3" title="text">3 stars</label>
-								    <input type="radio" id="star2" name="rate" value="2" />
-								    <label for="star2" title="text">2 stars</label>
-								    <input type="radio" id="star1" name="rate" value="1" />
-								    <label for="star1" title="text">1 star</label>
-								  </div>
-								<span>3 Reviews</span>
-							</div>
-	        			<div class="row">
-	        				<div class="col-md-6">
-	        					<label for="color">Color</label>
-								<select id="color" name="color" class="form-control">
-									<option>Blue</option>
-									<option>Green</option>
-									<option>Red</option>
-								</select>
-	        				</div>
-	        			</div>
-                            </div>			
+                                    <div class="rate">
+                                        <input type="radio" id="star5" name="rate" value="5" checked />
+                                        <label for="star5" title="text">5 stars</label>
+                                        <input type="radio" id="star4" name="rate" value="4" checked />
+                                        <label for="star4" title="text">4 stars</label>
+                                        <input type="radio" id="star3" name="rate" value="3" checked />
+                                        <label for="star3" title="text">3 stars</label>
+                                        <input type="radio" id="star2" name="rate" value="2" />
+                                        <label for="star2" title="text">2 stars</label>
+                                        <input type="radio" id="star1" name="rate" value="1" />
+                                        <label for="star1" title="text">1 star</label>
+                                    </div>
+                                    <span>3 Reviews</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
-               <!-- Edit mode -->
-               <div *ngIf="editMode">
-                <div *ngIf="editMode">
+                    <!-- View mode -->
+                    <div *ngIf="!editMode">
+                        <button class="button" (click)="addToCart(product, $event)">
+                            <span>Add to cart</span>
+                            <div class="cart">
+                                <svg viewBox="0 0 36 26">
+                                    <polyline points="1 2.5 6 2.5 10 18.5 25.5 18.5 28.5 7.5 7.5 7.5"></polyline>
+                                    <polyline points="15 13.5 17 15.5 22 10.5"></polyline>
+                                </svg>
+                            </div>
+                        </button>
 
-                    <form (ngSubmit)="saveProductChanges()">
-                        <div class="form-group">
-                            <label for="description">Description:</label>
-                            <textarea id="description" name="description" [(ngModel)]="editedProduct.description"
-                                class="form-control"></textarea>
-                        </div>
-                        <div class="form-group">
-                            <label for="price">Price:</label>
-                            <input type="number" id="price" name="price" [(ngModel)]="editedProduct.price" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <label for="discountPercentage">Discount Percentage:</label>
-                            <input type="number" id="discountPercentage" name="discountPercentage"
-                                [(ngModel)]="editedProduct.discountPercentage" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <label for="rating">Rating:</label>
-                            <input type="number" id="rating" name="rating" [(ngModel)]="editedProduct.rating"
-                                class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <label for="stock">Stock:</label>
-                            <input type="number" id="stock" name="stock" [(ngModel)]="editedProduct.stock" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <label for="brand">Brand:</label>
-                            <input type="text" id="brand" name="brand" [(ngModel)]="editedProduct.brand" class="form-control">
-                        </div>
-                        <div class="form-group">
-                            <label for="category">Category:</label>
-                            <input type="text" id="category" name="category" [(ngModel)]="editedProduct.category"
-                                class="form-control">
-                        </div>
-        
-                        <button type="submit" class="btn btn-primary">Save</button>
-                        <button type="button" class="btn btn-secondary" (click)="cancelEdit()">Cancel</button>
-                    </form>
+                        <!-- Edit button -->
+                        <a href="#myModal" role="button" class="btn btn-secondary edit-btn" data-toggle="modal">Edit</a>
+                    </div>
                 </div>
             </div>
-
-            <!-- View mode -->
-            <div *ngIf="!editMode">
-                <!-- Add to cart button -->
-                <ng-container *ngIf="isLoggedIn; else loginLink">
-                    <button class="btn btn-primary add-to-cart-btn" (click)="addToCart(product)">Add to Cart</button>
-                </ng-container>
-                <ng-template #loginLink>
-                    <a [routerLink]="['/home']" class="btn btn-primary"> Add to Cart</a>
-                </ng-template>
-
-                <!-- Edit button -->
-                <a [routerLink]="['/products', product.id, 'edit']" class="btn btn-secondary edit-btn">Edit</a>
-            </div>
         </div>
-		</div>
-	</div>
     </div>
+</div>
 
-             
+<!-- Modal -->
+<div class="modal fade" id="myModal" role="dialog">
+    <div class="modal-dialog" style="width: 450px">
+        <div class="modal-content" style="border: 6px solid; border-color: #daf0ef">
 
-
-    
+            <!-- Modal content -->
+            <div class="modal-body" style="width: 100%; background: #ffffff; padding: 50px">
+                <!-- Add your form here -->
+                <form (ngSubmit)="saveProductChanges()">
+                    <div class="form-group">
+                        <label for="description">Description:</label>
+                        <textarea id="description" name="description" [(ngModel)]="editedProduct.description"
+                            class="form-control"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label for="price">Price:</label>
+                        <input type="number" id="price" name="price" [(ngModel)]="editedProduct.price" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="discountPercentage">Discount Percentage:</label>
+                        <input type="number" id="discountPercentage" name="discountPercentage"
+                            [(ngModel)]="editedProduct.discountPercentage" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="rating">Rating:</label>
+                        <input type="number" id="rating" name="rating" [(ngModel)]="editedProduct.rating"
+                            class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="stock">Stock:</label>
+                        <input type="number" id="stock" name="stock" [(ngModel)]="editedProduct.stock" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="brand">Brand:</label>
+                        <input type="text" id="brand" name="brand" [(ngModel)]="editedProduct.brand" class="form-control">
+                    </div>
+                    <div class="form-group">
+                        <label for="category">Category:</label>
+                        <input type="text" id="category" name="category" [(ngModel)]="editedProduct.category"
+                            class="form-control">
+                    </div>
+                    <div class="modal-footer" style="width: 100%; background: #ffffff;">
+                        <button type="button" class="btn btn-default" data-dismiss="modal"
+                                style="background: #362A89; color: #fff">Save</button>
+                    </div>
+                </form>
+            </div>
+            
+        </div>
+    </div>
+</div>
